' Elabore um diagrama de classe para um sistema de vendas de produtos. O sistema deve contemplar:
' Produtos que possuem nome, preço e código.
' Cada venda é realizada por um cliente e pode incluir vários produtos.
' Um cliente tem nome, e-mail e número de telefone.
' Cada venda tem um total, data da venda e status de pagamento (pago/não pago).
' Sabe-se que:
' Um Cliente pode realizar várias Vendas.
' Uma Venda pode incluir vários Produtos, através de uma classe associativa ItemVenda.
' A classe ItemVenda tem a quantidade de cada produto na venda.

@startuml Venda-Produto
title Sistema de Vendas de Produtos

' Classes

class Produto{
    - nome: string
    - preco: float
    - codigo: string
}

class Venda{
    - cliente: Cliente
    - produtos: ItemVenda
    - total: float
    - data: date
    - pago: bool
}

class Cliente{
    - nome: string
    - email: string
    - telefone: string
}

class ItemVenda{
    - produto: Produto
    - venda: Venda
    - quantidade: int
}

' Relacionamentos
Cliente "1..1" -- "1..N" Venda: realiza
Venda "1..1" -- "1..N" ItemVenda: possui
Produto "1..1" -- "1..1" ItemVenda: inclui


@enduml